--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" type="image/png" href="{% static 'portfolio/Logo.png' %}">
 
-  <title>The Jocker</title>
+  <title>MZ Personal Portfolio</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">
         <img src="{% static 'portfolio/Logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="Sparta's Logo">
-        <span>The Jocker</span>
+        <span>Personal Portfolio</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
