--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-      <h1 id="hometext" class="font-weight-bold">This is my portfolio, why so serious? 😐😐</h1>
+      <h1 id="hometext" class="font-weight-bold">This is my portfolio, in the blog section you can find some 2020 topics</h1>
   </div>
 </div>
 
