--- a/portfolio/static/portfolio/custom.css
+++ b/portfolio/static/portfolio/custom.css
@@ -8,6 +8,11 @@
 
 body {
     font-family: 'Lato', sans-serif;
+
+    margin: 0;
+    padding: 0;
+    animation: bgcolor infinite 20s;
+
 }
 
 #blogtitle {
@@ -20,5 +25,55 @@ body {
     }
     #blogdetailtitle {
         font-size: 5rem;
+    }
+}
+
+{
+margin: 0;
+padding: 0;
+color: #fff;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%)
+text-align: center
+}
+
+@keyframes bgcolor{
+    0%
+    {
+    background: #fdfefe;
+    }
+    20%
+    {
+    background: #ccd1d1;
+    }
+    30%
+    {
+    background: #7f8c8d;
+    }
+    40%
+    {
+    background: #566573;
+    }
+    60%
+    {
+    background: #d98880;
+    }
+    70%
+    {
+    background: #c0392b;
+    }
+    80%
+    {
+    background: #922b21;
+    }
+    90%
+    {
+    background: #eaecee;
+    }
+    100%
+    {
+    background: #fdfefe;
     }
 }
